syntax = "proto3";

message DeleteNetworkRequest {
  string id = 1;
}
